--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.1",
     "nanoid": "^5.0.7",
+    "randombytes": "^2.1.0",
     "shortid": "^2.2.16",
     "uuid": "^10.0.0"
   }
